@@ -1,2 +1,3 @@
 0.01 - Wed Feb 14 17:05:34 PST 2007
+ - stripped noisy headers
  - initial release
